Add log-in operations
Added:
- class MainController,
- class Login (with password hashing function),
- class Database (with logins, hashed passwords, search methods and some garbage code for uploading from the database: no .sql files yet),
- namespace Math (power functions),
- namespace Error (basically a debugging runtime tool for user).

TODO:
- add .sql files to database,
- access .sql files via Database class (read, write).

--- a/Security-pack/Security-pack.vcxproj
+++ b/Security-pack/Security-pack.vcxproj
@@ -139,7 +139,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Security-pack.cpp" />
+    <ClCompile Include="src\Database.cpp" />
+    <ClCompile Include="src\Error.cpp" />
+    <ClCompile Include="src\Login.cpp" />
+    <ClCompile Include="src\MainController.cpp" />
+    <ClCompile Include="src\Math.cpp" />
+    <ClCompile Include="src\Security-pack.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Database.h" />
+    <ClInclude Include="src\Error.h" />
+    <ClInclude Include="src\Login.h" />
+    <ClInclude Include="src\MainController.h" />
+    <ClInclude Include="src\Math.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
