Add message management and combine with RSA
Overview:
- sending encrypted messages between accounts works.

TODO:
- allow for Polish characters in messages,
- increase RSA values and make sure that in Math::Power function numbers never exceed max type value (maybe create a custom variable type that's bigger than _int64).

Added:
- class Message to describe plain text messages and handle their creation,
- message menu in UI namespace,
- main menu options for viewing inbox and sending messages,
- privateKeys.db database specifically for storing users' private RSA keys,
- messages.db database for storing messages,
- RSA values in User class,
- a bunch of functions handling sending, checking, encrypting messages, traffic between the program and databases, displaying stuff in the console.

Modified:
- removed phi as an argument for InitRSA function (it was useless),
- added a special case for '\n' in conversions string->custom data and vice-versa,
- now the user can log-in only if they have their private key in privateKeys.db,
- moved some functions from DBConnect namespace to User class directly and some (callbacks) removed from the header and made apparent only in the .cpp file,
- function AddUser now also takes RSA values as arguments.

--- a/Security-pack/Security-pack.vcxproj
+++ b/Security-pack/Security-pack.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Message.cpp" />
     <ClCompile Include="src\Register.cpp" />
     <ClCompile Include="src\Hash.cpp" />
     <ClCompile Include="src\sqlite3.c" />
@@ -152,6 +153,7 @@
     <ClCompile Include="src\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Message.h" />
     <ClInclude Include="src\Register.h" />
     <ClInclude Include="src\Hash.h" />
     <ClInclude Include="src\DatabaseConnection.h" />
