Introduce large integers INT
Added:
- class INT capable of storing and performing operations on large numbers (stored as a string in decimal),
- objects of type INT can be compared to each other and added using operators (nedded support for negative adding),
- objects of type INT can be logged into console using standard << operator.

Modified:
- linked INT header to Math header.

TODO:
- create subtract, multiply, divide and modulo methods supporting negative numbers.

--- a/Security-pack/Security-pack.vcxproj
+++ b/Security-pack/Security-pack.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\INT.cpp" />
     <ClCompile Include="src\Message.cpp" />
     <ClCompile Include="src\Register.cpp" />
     <ClCompile Include="src\Hash.cpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="src\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\INT.h" />
     <ClInclude Include="src\Message.h" />
     <ClInclude Include="src\Register.h" />
     <ClInclude Include="src\Hash.h" />
