--- a/Security-pack/Security-pack.vcxproj.filters
+++ b/Security-pack/Security-pack.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\Message.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\INT.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\MainController.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Message.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\INT.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
